--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@topology/activity-diagram": "^0.3.0",
+    "@topology/chart-diagram": "^0.3.0",
+    "@topology/class-diagram": "^0.3.0",
+    "@topology/core": "^0.3.3",
+    "@topology/flow-diagram": "^0.3.0",
+    "@topology/layout": "^0.3.0",
+    "@topology/sequence-diagram": "^0.3.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
