--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@topology/activity-diagram": "^0.3.0",
     "@topology/chart-diagram": "^0.3.0",
     "@topology/class-diagram": "^0.3.0",
-    "@topology/core": "^0.3.3",
+    "@topology/core": "^0.3.8",
     "@topology/flow-diagram": "^0.3.0",
     "@topology/layout": "^0.3.0",
     "@topology/sequence-diagram": "^0.3.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -28,6 +29,7 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
